tests/should_fail/type_closure_sig_mismatch.nv
module type_closure_sig_mismatch
// Should fail: assigning closure with wrong signature to typed variable
let f: fn(Int) -> Int = |x: String| x
